2013-05-11  6.8.5-7 Cristy  <quetzlzacatenango@image...>
  * Sometimes an sRGB image is masquerading as grayscale (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23370).
  * Labels no longer overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22964).

2013-05-10  6.8.5-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-6, SVN revision 12257.

2013-05-09  6.8.5-6 Cristy  <quetzlzacatenango@image...>
  * The stream utility no longer faults when exporting float pixels (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23394).

2013-05-08  6.8.5-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-5, SVN revision 12227.

2013-05-07  6.8.5-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * Change the sample JPEG quantization table xml to something that works
    really well with 2x2 Chroma subsampling around quality 75.

2013-05-06  6.8.5-5 Glenn Randers-Pehrson <glennrp@image...>
  * Eliminate whitespace from image properties that hold PNG chunk data.

2013-05-05  6.8.5-5 Cristy  <quetzlzacatenango@image...>
  * The -poly option treats the opacity channel as alpha (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23346).
  * The -threshold 50% option returns a 50-50 black and white image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23354).
  * Let user override the TIFF rows per strip  (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=23307).
  * Fix transient bug in the -separate option (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23335).

2013-05-01  6.8.5-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-4, SVN revision 12089.

2013-05-01  6.8.5-4 Cristy  <quetzlzacatenango@image...>
  * Add DeleteImageArtifact() for jpeg:extent artifact (thanks to
    Jimmy Xie @ Microsoft).